# cloudmetrics

./: .flake8  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CITATION.cff  README.md  analysis.py  environment.yml  main.py  metrics.py  nc2h5.py  pyproject.toml  requirements-test.txt  requirements.txt  setup.cfg  setup.py
.github/workflows/: ci-pre-commit.yml  python-package-conda.yml  python-package-pip.yml  pythonapp.yml
Download/: __init__.py  modapsClient.py  worldviewClient.py
Metrics/: cf.py  computeMetrics.py  cop.py  createDataFrame.py  csd.py  cth.py  cwp.py  fourier.py  fracDim.py  iorg.py  iorgPoisson.py  network.py  objects.py  openSky.py  orientation.py  rdf.py  scai.py  twpVar.py  utils.py  woi.py
Postprocess/: analysis.py  measureEmbedding.py  sensitivity.py  spca.py  utils.py
Preprocess/: SceneFilter.py  __init__.py
cloudmetrics/: __init__.py  open_sky.py  utils.py
cloudmetrics/mask/: __init__.py  cloud_fraction.py  fractal_dimension.py  iorg.py  mica.py  objects.py  open_sky.py  orientation.py
cloudmetrics/metrics/: cloud_fraction.py  fourier.py  fractal_dimension.py  iorg.py  objects.py  open_sky.py  orientation.py  woi.py
cloudmetrics/objects/: __init__.py  label.py  metrics.py
cloudmetrics/objects/metrics/: __init__.py  _object_properties.py  abcop.py  cop.py  csd.py  (+5 more)
cloudmetrics/old/: iorg.py  iorgPoisson.py  utils.py
cloudmetrics/scalar/: __init__.py  spectral.py  stats.py  woi.py
cloudmetrics/utils/: __init__.py  synthetic_data.py  utils.py
doc/: conf.py  environment.yml
docs/: conf.py  developing.md  environment.yml  index.rst  metrics.md
notebooks/: Radial Distribution Function.ipynb
tests/: abcop_examples.py  cop_examples.py  scai_cop_examples.py  scai_examples.py  test_abcop.py  test_cloud_fraction.py  test_cop.py  test_csd.py  test_dummy.py  test_fourier.py  test_fractal_dimension.py  test_iorg.py  test_labelled_objects.py  test_nearest_neighbours.py  test_object_scales.py  test_open_sky.py  test_orientation.py  test_rdf.py  test_scai.py  test_scalar_stats.py  test_utils.py  test_woi.py
