[metadata]
name = cloudmetrics
version = attr: cloudmetrics.__version__
author = Leif Denby, Martin Janssens
author_email = l.c.denby[at]leeds.ac.uk, martin.janssens[at]wur.nl
description = Cloud pattern metrics toolkit
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/cloudsci/cloudmetrics

[options]
packages=find:
install_requires =
  scipy>=1.4.1
  PyWavelets>=1.1.1
  hilbertcurve>=2.0.5
  scikit-image>=0.16.2
  scikit-learn>=0.22.1

  matplotlib>=3.1.3
  seaborn>=0.10.0

# there's some issue with installing from pipy due to compilation
# we'll install directly from github for now
  ristretto @ git+https://github.com/erichson/ristretto#egg=ristretto
# ristretto>=0.1.2

[options.packages.find]
where=.

[options.extras_require]
test =
  pytest
  nbval
  nb-black
dev =
  %(test)s
  pre-commit
  ipython

[isort]
profile=black

# See the docstring in versioneer.py for instructions. Note that you must
# re-run 'versioneer.py setup' after changing this section, and commit the
# resulting files.

[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm>=6.2"]
