[metadata]
name = cloudmetrics
version = attr: cloudmetrics.__version__
author = Leif Denby, Martin Janssens
author_email = l.c.denby@leeds.ac.uk, martin.janssens@wur.nl
description = Cloud pattern metrics toolkit
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/cloudsci/cloudmetrics

[options]
packages=find:
install_requires =
  scipy>=1.4.1
  PyWavelets>=1.1.1
  hilbertcurve>=2.0.5
  scikit-image>=0.16.2
  scikit-learn>=0.22.1
  numba>=0.55.2

  matplotlib>=3.1.3
  seaborn>=0.10.0

setup_requires = setuptools_scm

[options.packages.find]
where=.

[options.extras_require]
test =
  pytest
  nbval
#  nb-black
dev =
  %(test)s
  pre-commit
  ipython

[isort]
profile=black

[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm>=6.2"]
